# LearningC

./: CMakeLists.txt
Algorithmics/Lesson1/: Exercise1.c  Exercise2.c  Exercise3.c  Exercise4.c  Exercise5.c  Exercise6.c
Algorithmics/Lesson2/: Exercise1.c
Algorithmics/Lesson3/: Exercise1.c  Exercise2.c  Exercise3.c
Algorithmics/Lesson4/: Exercise1.c
Programming Basics 1/Lesson 7/: Exercise1.c  Exercise14.c  Exercise16.c  Exercise17.c  Exercise18.c  Exercise19.c  Exercise2.c  Exercise23.c  Exercise24.c  Exercise25.c  Exercise3.c  Exercise4.c  Exercise5.c  Exercise6.c  Exercise8.c  Exercise9.c
ProgrammingBasics1/Lesson1/: HelloWorld.c
ProgrammingBasics1/Lesson10/: Exercise1.c  Exercise10.c  Exercise14.c  Exercise2.c  Exercise3.c  Exercise4.c  Exercise5.c  Exercise6.c  Exercise7.c  Exercise8.c  Exercise9.c
ProgrammingBasics1/Lesson11/: Exercise1.c  Exercise11.c  Exercise13.c  Exercise15.c  Exercise17.c  Exercise19.c  Exercise21.c  Exercise23.c  Exercise25.c  Exercise3.c  Exercise5.c  Exercise7.c  Exercise9.c
ProgrammingBasics1/Lesson12/: Exercise1.c  Exercise10.c  Exercise13.c  Exercise16.c  Exercise19.c  Exercise22.c  Exercise25.c  Exercise28.c  Exercise4.c  Exercise7.c
ProgrammingBasics1/Lesson13/: Exercise1.c
ProgrammingBasics1/Lesson7/: Exercise1.c  Exercise10.c  Exercise11.c  Exercise12.c  Exercise13.c  Exercise15.c  Exercise20.c  Exercise21.c  Exercise22.c  Exercise3.c  Exercise7.c
ProgrammingBasics1/Lesson8/: Exercise1.c  Exercise10.c  Exercise11.c  Exercise12.c  Exercise13.c  Exercise14.c  Exercise15.c  Exercise16.c  Exercise17.c  Exercise18.c  Exercise19.c  Exercise2.c  Exercise20.c  Exercise21.c  Exercise22.c  Exercise3.c  Exercise4.c  Exercise5.c  Exercise6.c  Exercise7.c  Exercise8.c  Exercise9.c
ProgrammingBasics1/Lesson9/: Exercise1.c  Exercise10.c  Exercise11.c  Exercise12.c  Exercise13.c  Exercise14.c  Exercise15.c  Exercise16.c  Exercise17.c  Exercise18.c  Exercise2.c  Exercise3.c  Exercise4.c  Exercise5.c  Exercise6.c  Exercise7.c  Exercise8.c  Exercise9.c
ProgrammingBasics2/Lesson1/: Exercise1.c  Exercise10.c  Exercise13.c  Exercise16.c  Exercise19.c  Exercise22.c  Exercise25.c  Exercise28.c  Exercise4.c  Exercise7.c
ProgrammingBasics2/Lesson5/: Exercise1.c  Exercise2.c  Exercise3.c  Exercise4.c  Exercise5.c  Exercise6.c
ProgrammingBasics2/Lesson6/: Exercise1.c
ProgrammingBasics2/Lesson7/: Exercise1.c
ProgrammingBasics2/Lesson8/: Exercise1.c
