cmake_minimum_required(VERSION 3.19)
project(LearningC C)

set(CMAKE_C_STANDARD 11)

add_executable(PB1-L1-E1 "Programming Basics 1/Lesson 1/HelloWorld.c")
add_executable(PB1-L7-E1 "Programming Basics 1/Lesson 7/Exercise1.c")
add_executable(PB1-L7-E2 "Programming Basics 1/Lesson 7/Exercise2.c")
add_executable(PB1-L7-E3 "Programming Basics 1/Lesson 7/Exercise3.c")
add_executable(PB1-L7-E4 "Programming Basics 1/Lesson 7/Exercise4.c")
add_executable(PB1-L7-E5 "Programming Basics 1/Lesson 7/Exercise5.c")
add_executable(PB1-L7-E6 "Programming Basics 1/Lesson 7/Exercise6.c")
add_executable(PB1-L7-E7 "Programming Basics 1/Lesson 7/Exercise7.c")
add_executable(PB1-L7-E8 "Programming Basics 1/Lesson 7/Exercise8.c")
add_executable(PB1-L7-E9 "Programming Basics 1/Lesson 7/Exercise9.c")
add_executable(PB1-L7-E10 "Programming Basics 1/Lesson 7/Exercise10.c")
add_executable(PB1-L7-E11 "Programming Basics 1/Lesson 7/Exercise11.c")
add_executable(PB1-L7-E12 "Programming Basics 1/Lesson 7/Exercise12.c")
add_executable(PB1-L7-E13 "Programming Basics 1/Lesson 7/Exercise13.c")
add_executable(PB1-L7-E14 "Programming Basics 1/Lesson 7/Exercise14.c")
add_executable(PB1-L7-E15 "Programming Basics 1/Lesson 7/Exercise15.c")
add_executable(PB1-L7-E16 "Programming Basics 1/Lesson 7/Exercise16.c")
add_executable(PB1-L7-E17 "Programming Basics 1/Lesson 7/Exercise17.c")
add_executable(PB1-L7-E18 "Programming Basics 1/Lesson 7/Exercise18.c")
add_executable(PB1-L7-E19 "Programming Basics 1/Lesson 7/Exercise19.c")
add_executable(PB1-L7-E20 "Programming Basics 1/Lesson 7/Exercise20.c")
add_executable(PB1-L7-E21 "Programming Basics 1/Lesson 7/Exercise21.c")
add_executable(PB1-L7-E22 "Programming Basics 1/Lesson 7/Exercise22.c")
add_executable(PB1-L7-E23 "Programming Basics 1/Lesson 7/Exercise23.c")