cmake_minimum_required(VERSION 3.19)
project(LearningC C)

set(CMAKE_C_STANDARD 11)

add_executable(PB1-L1-E1 "ProgrammingBasics1/Lesson1/HelloWorld.c")
add_executable(PB1-L7-E1 "ProgrammingBasics1/Lesson7/Exercise1.c")
add_executable(PB1-L7-E2 "ProgrammingBasics1/Lesson7/Exercise2.c")
add_executable(PB1-L7-E3 "ProgrammingBasics1/Lesson7/Exercise3.c")
add_executable(PB1-L7-E4 "ProgrammingBasics1/Lesson7/Exercise4.c")
add_executable(PB1-L7-E5 "ProgrammingBasics1/Lesson7/Exercise5.c")
add_executable(PB1-L7-E6 "ProgrammingBasics1/Lesson7/Exercise6.c")
add_executable(PB1-L7-E7 "ProgrammingBasics1/Lesson7/Exercise7.c")
add_executable(PB1-L7-E8 "ProgrammingBasics1/Lesson7/Exercise8.c")
add_executable(PB1-L7-E9 "ProgrammingBasics1/Lesson7/Exercise9.c")
add_executable(PB1-L7-E10 "ProgrammingBasics1/Lesson7/Exercise10.c")
add_executable(PB1-L7-E11 "ProgrammingBasics1/Lesson7/Exercise11.c")
add_executable(PB1-L7-E12 "ProgrammingBasics1/Lesson7/Exercise12.c")
add_executable(PB1-L7-E13 "ProgrammingBasics1/Lesson7/Exercise13.c")
add_executable(PB1-L7-E14 "ProgrammingBasics1/Lesson7/Exercise14.c")
add_executable(PB1-L7-E15 "ProgrammingBasics1/Lesson7/Exercise15.c")
add_executable(PB1-L7-E16 "ProgrammingBasics1/Lesson7/Exercise16.c")
add_executable(PB1-L7-E17 "ProgrammingBasics1/Lesson7/Exercise17.c")
add_executable(PB1-L7-E18 "ProgrammingBasics1/Lesson7/Exercise18.c")
add_executable(PB1-L7-E19 "ProgrammingBasics1/Lesson7/Exercise19.c")
add_executable(PB1-L7-E20 "ProgrammingBasics1/Lesson7/Exercise20.c")
add_executable(PB1-L7-E21 "ProgrammingBasics1/Lesson7/Exercise21.c")
add_executable(PB1-L7-E22 "ProgrammingBasics1/Lesson7/Exercise22.c")
add_executable(PB1-L7-E23 "ProgrammingBasics1/Lesson7/Exercise23.c")
add_executable(PB1-L7-E24 "ProgrammingBasics1/Lesson7/Exercise24.c")
add_executable(PB1-L7-E25 "ProgrammingBasics1/Lesson7/Exercise25.c")
add_executable(PB1-L8-E1 "ProgrammingBasics1/Lesson8/Exercise1.c")
add_executable(PB1-L8-E2 "ProgrammingBasics1/Lesson8/Exercise2.c")
add_executable(PB1-L8-E3 "ProgrammingBasics1/Lesson8/Exercise3.c")
add_executable(PB1-L8-E4 "ProgrammingBasics1/Lesson8/Exercise4.c")
add_executable(PB1-L8-E5 "ProgrammingBasics1/Lesson8/Exercise5.c")
add_executable(PB1-L8-E6 "ProgrammingBasics1/Lesson8/Exercise6.c")
add_executable(PB1-L8-E7 "ProgrammingBasics1/Lesson8/Exercise7.c")
add_executable(PB1-L8-E8 "ProgrammingBasics1/Lesson8/Exercise8.c")
add_executable(PB1-L8-E9 "ProgrammingBasics1/Lesson8/Exercise9.c")
add_executable(PB1-L8-E10 "ProgrammingBasics1/Lesson8/Exercise10.c")
add_executable(PB1-L8-E11 "ProgrammingBasics1/Lesson8/Exercise11.c")
add_executable(PB1-L8-E12 "ProgrammingBasics1/Lesson8/Exercise12.c")
add_executable(PB1-L8-E13 "ProgrammingBasics1/Lesson8/Exercise13.c")
add_executable(PB1-L8-E14 "ProgrammingBasics1/Lesson8/Exercise14.c")
add_executable(PB1-L8-E15 "ProgrammingBasics1/Lesson8/Exercise15.c")
add_executable(PB1-L8-E16 "ProgrammingBasics1/Lesson8/Exercise16.c")
add_executable(PB1-L8-E17 "ProgrammingBasics1/Lesson8/Exercise17.c")
add_executable(PB1-L8-E18 "ProgrammingBasics1/Lesson8/Exercise18.c")
add_executable(PB1-L8-E19 "ProgrammingBasics1/Lesson8/Exercise19.c")