cmake_minimum_required(VERSION 3.19)
project(LearningC C)

set(CMAKE_C_STANDARD 11)

add_executable(PB1-L1-E1 "ProgrammingBasics1/Lesson1/HelloWorld.c")
add_executable(PB1-L7-E1 "ProgrammingBasics1/Lesson7/Exercise1.c")
add_executable(PB1-L7-E2 "ProgrammingBasics1/Lesson7/Exercise2.c")
add_executable(PB1-L7-E3 "ProgrammingBasics1/Lesson7/Exercise3.c")
add_executable(PB1-L7-E4 "ProgrammingBasics1/Lesson7/Exercise4.c")
add_executable(PB1-L7-E5 "ProgrammingBasics1/Lesson7/Exercise5.c")
add_executable(PB1-L7-E6 "ProgrammingBasics1/Lesson7/Exercise6.c")
add_executable(PB1-L7-E7 "ProgrammingBasics1/Lesson7/Exercise7.c")
add_executable(PB1-L7-E8 "ProgrammingBasics1/Lesson7/Exercise8.c")
add_executable(PB1-L7-E9 "ProgrammingBasics1/Lesson7/Exercise9.c")
add_executable(PB1-L7-E10 "ProgrammingBasics1/Lesson7/Exercise10.c")
add_executable(PB1-L7-E11 "ProgrammingBasics1/Lesson7/Exercise11.c")
add_executable(PB1-L7-E12 "ProgrammingBasics1/Lesson7/Exercise12.c")
add_executable(PB1-L7-E13 "ProgrammingBasics1/Lesson7/Exercise13.c")
add_executable(PB1-L7-E14 "ProgrammingBasics1/Lesson7/Exercise14.c")
add_executable(PB1-L7-E15 "ProgrammingBasics1/Lesson7/Exercise15.c")
add_executable(PB1-L7-E16 "ProgrammingBasics1/Lesson7/Exercise16.c")
add_executable(PB1-L7-E17 "ProgrammingBasics1/Lesson7/Exercise17.c")
add_executable(PB1-L7-E18 "ProgrammingBasics1/Lesson7/Exercise18.c")
add_executable(PB1-L7-E19 "ProgrammingBasics1/Lesson7/Exercise19.c")
add_executable(PB1-L7-E20 "ProgrammingBasics1/Lesson7/Exercise20.c")
add_executable(PB1-L7-E21 "ProgrammingBasics1/Lesson7/Exercise21.c")
add_executable(PB1-L7-E22 "ProgrammingBasics1/Lesson7/Exercise22.c")
add_executable(PB1-L7-E23 "ProgrammingBasics1/Lesson7/Exercise23.c")
add_executable(PB1-L7-E24 "ProgrammingBasics1/Lesson7/Exercise24.c")
add_executable(PB1-L7-E25 "ProgrammingBasics1/Lesson7/Exercise25.c")
add_executable(PB1-L8-E1 "ProgrammingBasics1/Lesson8/Exercise1.c")
add_executable(PB1-L8-E2 "ProgrammingBasics1/Lesson8/Exercise2.c")
add_executable(PB1-L8-E3 "ProgrammingBasics1/Lesson8/Exercise3.c")
add_executable(PB1-L8-E4 "ProgrammingBasics1/Lesson8/Exercise4.c")
add_executable(PB1-L8-E5 "ProgrammingBasics1/Lesson8/Exercise5.c")
add_executable(PB1-L8-E6 "ProgrammingBasics1/Lesson8/Exercise6.c")
add_executable(PB1-L8-E7 "ProgrammingBasics1/Lesson8/Exercise7.c")
add_executable(PB1-L8-E8 "ProgrammingBasics1/Lesson8/Exercise8.c")
add_executable(PB1-L8-E9 "ProgrammingBasics1/Lesson8/Exercise9.c")
add_executable(PB1-L8-E10 "ProgrammingBasics1/Lesson8/Exercise10.c")
add_executable(PB1-L8-E11 "ProgrammingBasics1/Lesson8/Exercise11.c")
add_executable(PB1-L8-E12 "ProgrammingBasics1/Lesson8/Exercise12.c")
add_executable(PB1-L8-E13 "ProgrammingBasics1/Lesson8/Exercise13.c")
add_executable(PB1-L8-E14 "ProgrammingBasics1/Lesson8/Exercise14.c")
add_executable(PB1-L8-E15 "ProgrammingBasics1/Lesson8/Exercise15.c")
add_executable(PB1-L8-E16 "ProgrammingBasics1/Lesson8/Exercise16.c")
add_executable(PB1-L8-E17 "ProgrammingBasics1/Lesson8/Exercise17.c")
add_executable(PB1-L8-E18 "ProgrammingBasics1/Lesson8/Exercise18.c")
add_executable(PB1-L8-E19 "ProgrammingBasics1/Lesson8/Exercise19.c")
add_executable(PB1-L8-E20 "ProgrammingBasics1/Lesson8/Exercise20.c")
add_executable(PB1-L8-E21 "ProgrammingBasics1/Lesson8/Exercise21.c")
add_executable(PB1-L8-E22 "ProgrammingBasics1/Lesson8/Exercise22.c")
add_executable(PB1-L9-E1 "ProgrammingBasics1/Lesson9/Exercise1.c")
add_executable(PB1-L9-E2 "ProgrammingBasics1/Lesson9/Exercise2.c")
add_executable(PB1-L9-E3 "ProgrammingBasics1/Lesson9/Exercise3.c")
add_executable(PB1-L9-E4 "ProgrammingBasics1/Lesson9/Exercise4.c")
add_executable(PB1-L9-E5 "ProgrammingBasics1/Lesson9/Exercise5.c")
add_executable(PB1-L9-E6 "ProgrammingBasics1/Lesson9/Exercise6.c")
add_executable(PB1-L9-E7 "ProgrammingBasics1/Lesson9/Exercise7.c")
add_executable(PB1-L9-E8 "ProgrammingBasics1/Lesson9/Exercise8.c")
add_executable(PB1-L9-E9 "ProgrammingBasics1/Lesson9/Exercise9.c")
add_executable(PB1-L9-E10 "ProgrammingBasics1/Lesson9/Exercise10.c")
add_executable(PB1-L9-E11 "ProgrammingBasics1/Lesson9/Exercise11.c")
add_executable(PB1-L9-E12 "ProgrammingBasics1/Lesson9/Exercise12.c")
add_executable(PB1-L9-E13 "ProgrammingBasics1/Lesson9/Exercise13.c")
add_executable(PB1-L9-E14 "ProgrammingBasics1/Lesson9/Exercise14.c")
add_executable(PB1-L9-E15 "ProgrammingBasics1/Lesson9/Exercise15.c")
add_executable(PB1-L9-E16 "ProgrammingBasics1/Lesson9/Exercise16.c")
add_executable(PB1-L9-E17 "ProgrammingBasics1/Lesson9/Exercise17.c")
add_executable(PB1-L9-E18 "ProgrammingBasics1/Lesson9/Exercise18.c")
add_executable(PB1-L10-E1 "ProgrammingBasics1/Lesson10/Exercise1.c")
add_executable(PB1-L10-E2 "ProgrammingBasics1/Lesson10/Exercise2.c")
add_executable(PB1-L10-E3 "ProgrammingBasics1/Lesson10/Exercise3.c")
add_executable(PB1-L10-E4 "ProgrammingBasics1/Lesson10/Exercise4.c")
add_executable(PB1-L10-E5 "ProgrammingBasics1/Lesson10/Exercise5.c")
add_executable(PB1-L10-E6 "ProgrammingBasics1/Lesson10/Exercise6.c")
add_executable(PB1-L10-E7 "ProgrammingBasics1/Lesson10/Exercise7.c")
add_executable(PB1-L10-E8 "ProgrammingBasics1/Lesson10/Exercise8.c")
add_executable(PB1-L10-E9 "ProgrammingBasics1/Lesson10/Exercise9.c")
add_executable(PB1-L10-E10 "ProgrammingBasics1/Lesson10/Exercise10.c")
add_executable(PB1-L10-E14 "ProgrammingBasics1/Lesson10/Exercise14.c")
add_executable(PB1-L11-E1 "ProgrammingBasics1/Lesson11/Exercise1.c")
add_executable(PB1-L11-E3 "ProgrammingBasics1/Lesson11/Exercise3.c")
add_executable(PB1-L11-E5 "ProgrammingBasics1/Lesson11/Exercise5.c")
add_executable(PB1-L11-E7 "ProgrammingBasics1/Lesson11/Exercise7.c")
add_executable(PB1-L11-E9 "ProgrammingBasics1/Lesson11/Exercise9.c")
add_executable(PB1-L11-E11 "ProgrammingBasics1/Lesson11/Exercise11.c")
add_executable(PB1-L11-E13 "ProgrammingBasics1/Lesson11/Exercise13.c")
add_executable(PB1-L11-E15 "ProgrammingBasics1/Lesson11/Exercise15.c")
add_executable(PB1-L11-E17 "ProgrammingBasics1/Lesson11/Exercise17.c")
add_executable(PB1-L11-E19 "ProgrammingBasics1/Lesson11/Exercise19.c")
add_executable(PB1-L11-E21 "ProgrammingBasics1/Lesson11/Exercise21.c")
add_executable(PB1-L11-E23 "ProgrammingBasics1/Lesson11/Exercise23.c")
add_executable(PB1-L11-E25 "ProgrammingBasics1/Lesson11/Exercise25.c")
add_executable(PB1-L12-E1 "ProgrammingBasics1/Lesson12/Exercise1.c")
add_executable(PB1-L12-E4 "ProgrammingBasics1/Lesson12/Exercise4.c")
add_executable(PB1-L12-E7 "ProgrammingBasics1/Lesson12/Exercise7.c")
add_executable(PB1-L12-E10 "ProgrammingBasics1/Lesson12/Exercise10.c")
add_executable(PB1-L12-E13 "ProgrammingBasics1/Lesson12/Exercise13.c")
add_executable(PB1-L12-E16 "ProgrammingBasics1/Lesson12/Exercise16.c")
add_executable(PB1-L12-E19 "ProgrammingBasics1/Lesson12/Exercise19.c")
add_executable(PB1-L12-E22 "ProgrammingBasics1/Lesson12/Exercise22.c")
add_executable(PB1-L12-E25 "ProgrammingBasics1/Lesson12/Exercise25.c")
add_executable(PB1-L12-E28 "ProgrammingBasics1/Lesson12/Exercise28.c")
add_executable(PB1-L13-E1 "ProgrammingBasics1/Lesson13/Exercise1.c")
add_executable(PB2-L1-E1 "ProgrammingBasics2/Lesson1/Exercise1.c")
add_executable(PB2-L1-E4 "ProgrammingBasics2/Lesson1/Exercise4.c")
add_executable(PB2-L1-E7 "ProgrammingBasics2/Lesson1/Exercise7.c")
add_executable(PB2-L1-E10 "ProgrammingBasics2/Lesson1/Exercise10.c")
add_executable(PB2-L1-E13 "ProgrammingBasics2/Lesson1/Exercise13.c")
add_executable(PB2-L1-E16 "ProgrammingBasics2/Lesson1/Exercise16.c")
add_executable(PB2-L1-E19 "ProgrammingBasics2/Lesson1/Exercise19.c")
add_executable(PB2-L1-E22 "ProgrammingBasics2/Lesson1/Exercise22.c")
add_executable(PB2-L1-E25 "ProgrammingBasics2/Lesson1/Exercise25.c")
add_executable(PB2-L1-E28 "ProgrammingBasics2/Lesson1/Exercise28.c")
add_executable(PB2-L5-E1 "ProgrammingBasics2/Lesson5/Exercise1.c")
add_executable(PB2-L5-E2 "ProgrammingBasics2/Lesson5/Exercise2.c")
add_executable(PB2-L5-E3 "ProgrammingBasics2/Lesson5/Exercise3.c")
add_executable(PB2-L5-E4 "ProgrammingBasics2/Lesson5/Exercise4.c")
add_executable(PB2-L5-E5 "ProgrammingBasics2/Lesson5/Exercise5.c")
add_executable(PB2-L5-E6 "ProgrammingBasics2/Lesson5/Exercise6.c")
add_executable(PB2-L6-E1 "ProgrammingBasics2/Lesson6/Exercise1.c")
add_executable(PB2-L7-E1 "ProgrammingBasics2/Lesson7/Exercise1.c")
add_executable(PB2-L8-E1 "ProgrammingBasics2/Lesson8/Exercise1.c")
add_executable(AL-L1-E1 "Algorithmics/Lesson1/Exercise1.c")
add_executable(AL-L1-E2 "Algorithmics/Lesson1/Exercise2.c")